--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.15.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
