--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^7.1.0",
     "react-spinners": "^0.15.0",
+    "react-star-ratings": "^2.3.0",
     "sort-by": "^1.2.0",
+    "swiper": "^11.1.15",
     "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
